Implement update event
