# domain/repositories/EventsRepositoryInterface.ts
@@ -6,4 +6,5 @@ export interface EventsRepositoryInterface {
     createEvent(event: EventEntity): Promise<InsertResultInterface | null>;
     getEventById(id: number): Promise<EventEntity | null>;
     getEventsByPage(page: number, limits: number): Promise<EventEntity[] | null>;
+    updateEvent(id: number, event: EventEntity): Promise<InsertResultInterface | null>;
 };
